--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,10 +1,11 @@
+---
 name: python
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
 
@@ -21,7 +22,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: black
-      run: black --check .
-    - name: pytest
-      run: pytest .
+
+    - run: pytest .
+    - run: black --check .
+      if: always()
+
+    - run: flake8 .
+      if: always()
